# Drift-Aware-Fault-Tolerance-QEC

./: .gitignore  ACTION_ITEMS_FOR_AUTHOR.md  ASYNC_JOB_GUIDE.md  BREAKTHROUGH_DISCOVERY_SUMMARY.md  CITATION.cff  COMPETITOR_ANALYSIS_COMPREHENSIVE.md  CONTRIBUTING.md  DEEP_UNIQUENESS_ANALYSIS.md  DESK_REJECTION_FIXES_COMPLETE.md  DESK_REJECTION_MITIGATION_COMPLETE.md  DESK_REJECTION_MITIGATION_QUICK_REF.md  EXTREME_NOVELTY_ENHANCEMENT_PLAN.md  FIGURE_INTEGRITY_VERIFICATION.md  FINAL_ACCEPTANCE_ASSESSMENT.md  FINAL_SUBMISSION_SUMMARY.md  IMPLEMENTATION_SUMMARY_B_PLUS_C.md  MANUSCRIPT_EVIDENCE_ANALYSIS.md  MANUSCRIPT_EVIDENCE_ANALYSIS_V2.md  MANUSCRIPT_IMPROVEMENTS_SUMMARY.md  MANUSCRIPT_INTEGRATION_COMPLETE.md  MANUSCRIPT_TRANSFORMATION_COMPLETE.md  MULTIPLATFORM_VALIDATION_SUMMARY.md  NPJQI_SUBMISSION_PACKAGE_COMPLETE.md  OVERCLAIMS_AND_FIXES_REPORT.md  PEER_REVIEW_READINESS_ASSESSMENT.md  PRE_SUBMISSION_ACTIONS.md  README.md  REPRODUCIBILITY_CARD.md  REVISION_COMPLETE_SUMMARY.md  SCIENTIFIC_INTEGRITY_VERIFICATION.md  SUBMISSION_BULLETPROOF_FINAL.md  SUBMISSION_COMPLETE_SUMMARY.md  SUBMISSION_FINAL_ASSESSMENT.md  SUBMISSION_FIXES_COMPLETE.md  SUBMISSION_PACKAGE_COMPLETE.md  SUBMISSION_PACKAGE_README.md  SUBMISSION_READINESS_CHECKLIST.md  SUBMISSION_READINESS_FINAL.md  SUBMISSION_READY_FINAL.md  VALIDATION_COMPLETION_SUMMARY.md  (+23 more)
.codacy/: codacy.yaml
analysis/: analyze_N48_results.py  analyze_N69_results.py  compare_datasets.py  compute_sample_size.py  coupling_robust_analysis.py  cross_validate_interaction.py  deep_heterogeneity_investigation.py  generate_extended_data_figures.py  generate_main_interaction_figure.py  generate_master_figure.py  generate_simulation_figures.py  generate_source_data.py  mechanistic_interpretation.py  nature_tier_manifest.json  nature_tier_manifest.txt  nature_tier_stats.py  reviewer_preemption.json  reviewer_preemption_stats.py  stats_manifest.json  stats_plan.py  strata_analysis.json  strata_analysis.py  visualize_interaction_effect.py
config/: backends.yaml  experiment_config.yaml  experiments.yaml  selectors.yaml
daqec/: README.md  __init__.py  decoding.py  policy.py  probes.py  pyproject.toml  selection.py
data/raw/: .gitkeep
notebooks/: phase0_infrastructure.ipynb  phase1_baseline.ipynb  phase2_realtime.ipynb  phase3_adaptive.ipynb  phase4_analysis.ipynb
protocol/: CLAIMS.md  deployment_study_protocol.md  independent_reproduction.md  protocol.yaml  protocol_locked.json  reproduction_report_template.md  run_protocol.py
results/: COMPLETE_EXPERIMENT_SUMMARY.json  DEEP_EXPERIMENT_ANALYSIS.json  MULTI_DEVICE_VALIDATION_PACKAGE.json  QUANTUM_TASK_IDS.json  coupling_robust_analysis.json  interaction_effect_analysis.json  mechanistic_model.json
scripts/: analyze_all_iqm_data.py  analyze_all_iqm_results.py  analyze_ibm_results.py  analyze_iqm_results.py  analyze_iqm_v4_results.py  analyze_iqm_v4_stratified.py  build_master.py  build_submission.py  characterize_iqm_qubits.py  collect_results.py  comprehensive_analysis.py  comprehensive_experiment_analysis.py  confounder_sensitivity.py  consolidate_results.py  debug_iqm_emerald.py  deep_experiment_analysis.py  download_benchmark.py  extended_generalizability_simulation.py  final_gates.py  finalize_manuscript.py  find_best_evidence.py  generate_dose_response_figure.py  generate_figures.py  generate_honest_figures.py  generate_mechanism_figure.py  generate_publication_figures.py  generate_real_figures.py  generate_si_figures.py  generate_si_figures_part2.py  generate_simulation_data.py  generate_specification_curve.py  generic_drift_simulation.py  ibm_hardware_validation.py  iqm_validation_summary.py  jit_baseline_comparison.py  legend_compliance.py  lock_protocol.py  multi_platform_experiments.py  populate_si.py  prepare_zenodo_package.py  (+25 more)
si/: SI.fdb_latexmk  SI.fls  SI.toc  confounder_sensitivity_results.json
simulations/: generate_figures.py  ml_policy_optimizer.py  surface_code_simulator.py  surface_code_simulator_v2.py
source_data/: README.md  SourceData.xlsx
src/: __init__.py
submission/: PEER_REVIEW_SURVIVAL_CHECKLIST.md  anticipated_reviewer_responses.md  code_availability.md  data_availability.md  double_anonymized_checklist.md  editor_memo.fdb_latexmk  editor_memo.fls  reporting_summary.md  revision_bundle.md  transfer_ready_variants.md
tests/: __init__.py  conftest.py  test_analysis.py  test_calibration.py  test_probes.py  test_qec.py  test_utils.py
zenodo_v2/: COMPREHENSIVE_VALIDATION_REPORT.md  (+1 more)
(+130 files in other folders)
