[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daqec"
version = "1.0.0"
description = "Drift-Aware Quantum Error Correction Toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DAQEC Research Team"}
]
keywords = [
    "quantum computing",
    "quantum error correction",
    "QEC",
    "drift-aware",
    "fault tolerance",
    "IBM Quantum",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
hardware = [
    "qiskit>=1.0.0",
    "qiskit-ibm-runtime>=0.20.0",
]
decoding = [
    "pymatching>=2.0.0",
]
full = [
    "daqec[hardware,decoding]",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
]
dev = [
    "daqec[full]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ProgrmerJack/Drift-Aware-Fault-Tolerance-QEC"
Documentation = "https://github.com/ProgrmerJack/Drift-Aware-Fault-Tolerance-QEC#readme"
Repository = "https://github.com/ProgrmerJack/Drift-Aware-Fault-Tolerance-QEC.git"
Issues = "https://github.com/ProgrmerJack/Drift-Aware-Fault-Tolerance-QEC/issues"
Benchmark = "https://doi.org/10.5281/zenodo.XXXXXXX"

[tool.hatch.build.targets.wheel]
packages = ["daqec"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
